--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_home">Home</string>
     <string name="title_detail">Detail</string>
+    <string name="title_error">Error</string>
+    <string name="title_loading">Loading...</string>
 </resources>
